--- a/First_LR_GNB/main.ipynb
+++ b/First_LR_GNB/main.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q4 Experiments"
+    "# Logestic Regression and Gaussian Naive Implementation\n",
+    "Experiment to verify whether the weights of logistic regression converge using gradient ascent, even when starting from different initial points."
    ]
   },
   {
@@ -127,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q5 Experminets (Learning Curve for LR and GNB)"
+    "## Learning Curve for Logestic Regression and Gaussian Naive bayes "
    ]
   },
   {
@@ -423,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Q5 Generated Data using GNB"
+    "## Generated Data using GNB"
    ]
   },
   {
